--- a/packages/web/i18n/en/common.json
+++ b/packages/web/i18n/en/common.json
@@ -734,6 +734,9 @@
   "core.module.template.AI function": "AI Capability",
   "core.module.template.AI response switch tip": "If you want the current node not to output content, you can turn off this switch. The content output by AI will not be displayed to the user, and you can manually use 'AI Response Content' for special processing.",
   "core.module.template.AI support tool tip": "Models that support function calls can better use tool calls.",
+  "core.module.template.Game function": "Game Function",
+  "core.module.template.Game function desc": "Use the game function to call the game API",
+  "core.module.template.Game function tip": "The game function is used to call the game API, which can be used to query game information, such as game news, game reviews, and game rankings.",
   "core.module.template.Basic Node": "Basic",
   "core.module.template.Query extension": "Question Optimization",
   "core.module.template.System Plugin": "System Plugin",
