--- a/packages/web/i18n/zh-CN/common.json
+++ b/packages/web/i18n/zh-CN/common.json
@@ -733,6 +733,9 @@
   "core.module.template.AI function": "AI能力",
   "core.module.template.AI response switch tip": "如果你希望当前节点不输出内容，可以关闭该开关。AI 输出的内容不会展示给用户，你可以手动的使用“AI 回复内容”进行特殊处理。",
   "core.module.template.AI support tool tip": "支持函数调用的模型，可以更好的使用工具调用。",
+  "core.module.template.Game function": "游戏功能",
+  "core.module.template.Game function desc": "使用游戏功能调用游戏 API",
+  "core.module.template.Game function tip": "游戏功能用于调用游戏 API，可以用于查询游戏信息，如游戏新闻、游戏评测、游戏排行榜等。",
   "core.module.template.Basic Node": "基础功能",
   "core.module.template.Query extension": "问题优化",
   "core.module.template.System Plugin": "系统插件",
