--- a/packages/web/i18n/zh-Hant/common.json
+++ b/packages/web/i18n/zh-Hant/common.json
@@ -734,6 +734,9 @@
   "core.module.template.AI function": "AI 功能",
   "core.module.template.AI response switch tip": "如果您希望目前節點不輸出內容，可以關閉此開關。AI 輸出的內容不會顯示給使用者，您可以手動使用「AI 回覆內容」進行特殊處理。",
   "core.module.template.AI support tool tip": "支援函式呼叫的模型可以更好地使用工具呼叫。",
+  "core.module.template.Game function": "遊戲功能",
+  "core.module.template.Game function desc": "使用遊戲功能呼叫遊戲 API",
+  "core.module.template.Game function tip": "遊戲功能用於呼叫遊戲 API，可以查詢遊戲資訊，如遊戲新聞、遊戲評測、遊戲排行榜等。",
   "core.module.template.Basic Node": "基本功能",
   "core.module.template.Query extension": "問題最佳化",
   "core.module.template.System Plugin": "系統插件",
