Update local files.

--- a/packages/web/i18n/en/workflow.json
+++ b/packages/web/i18n/en/workflow.json
@@ -87,6 +87,8 @@
   "intro_question_optimization": "Using question optimization can improve the accuracy of Dataset searches during continuous conversations. After using this function, AI will first construct one or more new search terms based on the context, which are more conducive to Dataset searches. This module is already built into the Dataset search module. If you only perform a single Dataset search, you can directly use the built-in completion function of the Dataset.",
   "intro_text_concatenation": "Can process and output fixed or incoming text. Non-string type data will be converted to string type.",
   "intro_text_content_extraction": "Can extract specified data from text, such as SQL statements, search keywords, code, etc.",
+  "intro_story_creation": "Can create a story based on the user's input.",
+  "intro_story_creation_tip": "You can use the story creation module to create a story based on the user's input. The story will be created based on the user's input and the story will be created based on the user's input.",
   "intro_tool_call_termination": "This module needs to be configured for tool calls. When this module is executed, the current tool call will be forcibly terminated, and AI will no longer answer questions based on the tool call results.",
   "intro_tool_params_config": "This module needs to be used with tool calls. \nYou can customize tool call parameters and pass them to downstream nodes for use.",
   "is_empty": "Is Empty",
@@ -166,6 +168,8 @@
   "text_concatenation": "Text Editor",
   "text_content_extraction": "Text Extract",
   "text_to_extract": "Text to Extract",
+  "story_creation": "Story Creation",
+  "story_creation_tip": "You can use the story creation module to create a story based on the user's input. The story will be created based on the user's input and the story will be created based on the user's input.",
   "these_variables_will_be_input_parameters_for_code_execution": "These variables will be input parameters for code execution",
   "tool_call_termination": "Stop ToolCall",
   "tool_custom_field": "Custom Tool",
