--- a/packages/web/i18n/zh-CN/workflow.json
+++ b/packages/web/i18n/zh-CN/workflow.json
@@ -88,6 +88,8 @@
   "intro_text_concatenation": "可对固定或传入的文本进行加工后输出，非字符串类型数据最终会转成字符串类型。",
   "intro_text_content_extraction": "可从文本中提取指定的数据，例如：sql语句、搜索关键词、代码等",
   "intro_tool_call_termination": "该模块需配置工具调用使用。当该模块被执行时，本次工具调用将会强制结束，并且不再调用AI针对工具调用结果回答问题。",
+  "intro_story_creation": "根据用户输入，创建一个故事。",
+  "intro_story_creation_tip": "您可以使用故事创建模块根据用户输入创建一个故事。故事将根据用户输入创建，并根据用户输入创建。",
   "intro_tool_params_config": "该模块需要配合工具调用使用。可以自定义工具调用参数，并传递到下游节点使用",
   "is_empty": "为空",
   "is_equal_to": "等于",
@@ -165,6 +167,8 @@
   "template.workflow_start": "流程开始",
   "text_concatenation": "文本拼接",
   "text_content_extraction": "文本内容提取",
+  "story_creation": "故事创建",
+  "story_creation_tip": "您可以使用故事创建模块根据用户输入创建一个故事。故事将根据用户输入创建，并根据用户输入创建。",
   "text_to_extract": "需要提取的文本",
   "these_variables_will_be_input_parameters_for_code_execution": "这些变量会作为代码的运行的输入参数",
   "tool_call_termination": "工具调用终止",
