--- a/packages/web/i18n/zh-Hant/workflow.json
+++ b/packages/web/i18n/zh-Hant/workflow.json
@@ -87,6 +87,8 @@
   "intro_question_optimization": "使用問題最佳化功能，可以提升知識庫連續對話時的搜尋精準度。使用這個功能後，會先利用 AI 根據脈絡建構一個或多個新的檢索詞彙，這些詞彙更有利於知識庫搜尋。這個模組已內建於知識庫搜尋模組中，如果您只進行一次知識庫搜尋，可以直接使用知識庫內建的自動完成功能。",
   "intro_text_concatenation": "可以處理並輸出固定的或傳入的文字。非字串類型的資料會被轉換成字串類型。",
   "intro_text_content_extraction": "可以從文字中擷取指定的資料，例如：SQL 敘述、搜尋關鍵字、程式碼等等",
+  "intro_story_creation": "根据用户输入，创建一个故事。",
+  "intro_story_creation_tip": "您可以使用故事创建模块根据用户输入创建一个故事。故事将根据用户输入创建，并根据用户输入创建。",
   "intro_tool_call_termination": "這個模組需要搭配工具呼叫使用。當這個模組被執行時，這次的工具呼叫會被強制終止，AI 不會再根據工具呼叫結果回答問題。",
   "intro_tool_params_config": "這個模組需要搭配工具呼叫使用。\n您可以自訂工具呼叫參數，並傳送到下游節點使用",
   "is_empty": "為空",
