Update some prompts.

--- a/packages/web/i18n/en/workflow.json
+++ b/packages/web/i18n/en/workflow.json
@@ -50,6 +50,11 @@
   "extraction_requirements_description": "Extraction Requirements Description",
   "extraction_requirements_description_detail": "Provide AI with some background knowledge or requirements to guide it in completing the task better.\\nThis input box can use global variables.",
   "extraction_requirements_placeholder": "For example: \\n1. The current time is: {{cTime}}. You are a lab reservation assistant, and your task is to help users reserve a lab by extracting the corresponding reservation information from the text.\\n2. You are a Google search assistant, and you need to extract suitable search terms from the text.",
+  "story_creation_background_setting": "Story Background Setting",
+  "story_creation_background_setting_tip": "Provide some background settings to guide the story creation.\\nThis input box can use global variables.",
+  "story_creation_background_setting_placeholder": "For example: You are The protagonist, Xiao Tu, was once a passionate patriotic student in Shanghai two years ago, fervently shouting “Resist Japan and save the nation” on the streets. However, due to his youthful fervor, he was arrested and imprisoned. After his release, his teacher arranged for him to study in Japan. Two years later, the image of the patriotic student he once was has long been forgotten, and now his teacher and organization have decided to have him infiltrate the enemy’s ranks. Players are required to cleverly play the role of this “Mission: Impossible”-like character.\nMain characters include Xiao Tu, Fang Min, Fang Hanzhou, Lu Wangshu, Zhuang Xiaoman, and Wutou Chunko, among others.",
+  "story_creation_context_setting": "Story Context Setting",
+  "story_creation_context_setting_tip": "Provide some context to guide the story creation.",
   "feedback_text": "Feedback Text",
   "field_description": "Field Description",
   "field_description_placeholder": "Describe the function of this input field. If it is a tool call parameter, this description will affect the quality of the model generation.",
