--- a/packages/web/i18n/zh-Hant/workflow.json
+++ b/packages/web/i18n/zh-Hant/workflow.json
@@ -50,6 +50,11 @@
   "extraction_requirements_description": "擷取需求描述",
   "extraction_requirements_description_detail": "提供 AI 相對應的背景知識或需求描述，引導 AI 更好地完成任務。\\n這個輸入框可以使用全域變數。",
   "extraction_requirements_placeholder": "例如：\\n1. 目前時間為：{{cTime}}。您是一位實驗室預約助理，您的任務是協助使用者預約實驗室，從文字中取得對應的預約資訊。\\n2. 您是 Google 搜尋助理，需要從文字中擷取出合適的搜尋詞。",
+  "story_creation_background_setting": "故事背景設定",
+  "story_creation_background_setting_tip": "提供一些背景設定，引導故事的創建。\\n這個輸入框可以使用全域變數。",
+  "story_creation_background_setting_placeholder": "例如：\\n1. 你是一位上海爱国学生，两年前在上海街头高喊“抵抗日本，拯救国家”。然而，由于你的年轻热情，你被捕入狱。出狱后，你的老师安排你去日本学习。两年后，你曾经的爱国学生形象早已被人遗忘，现在你的老师和组织决定让你潜入敌人的阵营。玩家需要巧妙地扮演这个“不可能的任务”角色。\\n主要角色包括小图、方敏、方汉舟、卢王叔、庄晓曼和吴头春子等。",
+  "story_creation_context_setting": "故事上下文设定",
+  "story_creation_context_setting_tip": "提供一些上下文，引导故事的创建。",
   "feedback_text": "回饋文字",
   "field_description": "欄位描述",
   "field_description_placeholder": "描述這個輸入欄位的功能，如果是工具呼叫參數，這個描述會影響模型產生的品質",
