--- a/packages/web/i18n/zh-CN/workflow.json
+++ b/packages/web/i18n/zh-CN/workflow.json
@@ -50,6 +50,11 @@
   "extraction_requirements_description": "提取要求描述",
   "extraction_requirements_description_detail": "给AI一些对应的背景知识或要求描述，引导AI更好的完成任务。\\n该输入框可使用全局变量。",
   "extraction_requirements_placeholder": "例如: \\n1. 当前时间为: {{cTime}}。你是一个实验室预约助手，你的任务是帮助用户预约实验室，从文本中获取对应的预约信息。\\n2. 你是谷歌搜索助手，需要从文本中提取出合适的搜索词。",
+  "story_creation_background_setting": "故事背景设定",
+  "story_creation_background_setting_tip": "提供一些背景设定，引导故事的创建。\\n该输入框可使用全局变量。",
+  "story_creation_background_setting_placeholder": "例如: 你是一个上海爱国学生，两年前在上海街头高喊“抵抗日本，拯救国家”。然而，由于你的年轻热情，你被捕入狱。出狱后，你的老师安排你去日本学习。两年后，你曾经的爱国学生形象早已被人遗忘，现在你的老师和组织决定让你潜入敌人的阵营。玩家需要巧妙地扮演这个“不可能的任务”角色。\\n主要角色包括小图、方敏、方汉舟、卢王叔、庄晓曼和吴头春子等。",
+  "story_creation_context_setting": "故事上下文设定",
+  "story_creation_context_setting_tip": "提供一些上下文，引导故事的创建。",
   "feedback_text": "反馈的文本",
   "field_description": "字段描述",
   "field_description_placeholder": "描述该输入字段的功能，如果为工具调用参数，则该描述会影响模型生成的质量",
