Implement image generation

--- a/packages/web/i18n/zh-Hant/common.json
+++ b/packages/web/i18n/zh-Hant/common.json
@@ -769,6 +769,8 @@
   "core.module.variable.variable option is required": "選項不能全部為空",
   "core.module.variable.variable option is value is required": "選項內容不能為空",
   "core.module.variable.variable options": "選項",
+  "core.module.Add_dialog": "添加對話",
+  "core.module.Add_choices": "添加選項",
   "core.plugin.Custom headers": "自訂請求標頭",
   "core.plugin.Free": "此外掛程式不需消耗點數",
   "core.plugin.Get Plugin Module Detail Failed": "取得外掛程式資訊失敗",
@@ -867,6 +869,7 @@
   "dataset.deleteFolderTips": "確認刪除此資料夾及其包含的所有知識庫？刪除後資料無法復原，請確認！",
   "dataset.test.noResult": "搜尋結果為空",
   "delete_api": "確認刪除此 API 金鑰？\n刪除後該金鑰將立即失效，對應的對話記錄不會被刪除，請確認！",
+  "dialog": "對話",
   "error.Create failed": "建立失敗",
   "error.code_error": "驗證碼錯誤",
   "error.fileNotFound": "找不到檔案",
