--- a/packages/web/i18n/en/common.json
+++ b/packages/web/i18n/en/common.json
@@ -657,6 +657,8 @@
   "core.dataset.website.UnValid Website Tip": "Your site may not be a static site and cannot be synced",
   "core.module.Add question type": "Add Question Type",
   "core.module.Add_option": "Add Option",
+  "core.module.Add_dialog": "Add Dialog",
+  "core.module.Add_choices": "Add Choices",
   "core.module.Can not connect self": "Cannot Connect to Itself",
   "core.module.Data Type": "Data Type",
   "core.module.Dataset quote.label": "Dataset Quote",
@@ -865,6 +867,7 @@
   "dataset.dataset_name": "Dataset Name",
   "dataset.deleteFolderTips": "Confirm to Delete This Folder and All Its Contained Datasets? Data Cannot Be Recovered After Deletion, Please Confirm!",
   "dataset.test.noResult": "No Search Results",
+  "dialog": "Dialog",
   "delete_api": "Are you sure you want to delete this API key? \nAfter deletion, the key will become invalid immediately and the corresponding conversation log will not be deleted. Please confirm!",
   "error.Create failed": "Create failed",
   "error.code_error": "Verification code error",
