--- a/packages/web/i18n/zh-CN/common.json
+++ b/packages/web/i18n/zh-CN/common.json
@@ -768,6 +768,8 @@
   "core.module.variable.variable option is required": "选项不能全空",
   "core.module.variable.variable option is value is required": "选项内容不能为空",
   "core.module.variable.variable options": "选项",
+  "core.module.Add_dialog": "添加对话",
+  "core.module.Add_choices": "添加选项",
   "core.plugin.Custom headers": "自定义请求头",
   "core.plugin.Free": "该插件无需积分消耗～",
   "core.plugin.Get Plugin Module Detail Failed": "加载插件异常",
@@ -865,6 +867,7 @@
   "dataset.deleteFolderTips": "确认删除该文件夹及其包含的所有知识库？删除后数据无法恢复，请确认！",
   "dataset.test.noResult": "搜索结果为空",
   "delete_api": "确认删除该API密钥？删除后该密钥立即失效，对应的对话日志不会删除，请确认！",
+  "dialog": "对话",
   "error.Create failed": "创建失败",
   "error.code_error": "验证码错误",
   "error.fileNotFound": "文件找不到了~",
